# Alexandria

./: .gitignore  CMakeLists.txt  README.md  main.c  shell.nix
inc/: CMakeLists.txt  alexandria.h
inc/alexandria/: define.h  helpers.h  typedef.h  window.h
src/: CMakeLists.txt  alexandria.c  window.c
test/: CMakeLists.txt  main.c
